@@ -1,40 +1,27 @@
-\indexentry{trace file}{3}
-\indexentry{entities}{7}
-\indexentry{containers}{7}
-\indexentry{container}{8}
-\indexentry{entity}{8}
-\indexentry{type hierarchy}{8}
+\indexentry{container}{2}
+\indexentry{entity}{2}
+\indexentry{SDDF}{2}
+\indexentry{EventDef}{3}
+\indexentry{EndEventDef}{3}
+\indexentry{date}{3}
+\indexentry{PajeDefineContainerType}{5}
+\indexentry{PajeCreateContainer}{6}
+\indexentry{PajeDestroyContainer}{6}
 \indexentry{event}{8}
 \indexentry{state}{8}
 \indexentry{link}{8}
 \indexentry{variable}{8}
-\indexentry{type hierarchy}{9}
-\indexentry{container}{9}
-\indexentry{entity}{9}
-\indexentry{container}{11}
-\indexentry{entity}{11}
-\indexentry{SDDF}{11}
-\indexentry{EventDef}{12}
-\indexentry{EndEventDef}{12}
-\indexentry{date}{12}
-\indexentry{PajeDefineContainerType}{14}
-\indexentry{PajeCreateContainer}{15}
-\indexentry{PajeDestroyContainer}{15}
-\indexentry{event}{17}
-\indexentry{state}{17}
-\indexentry{link}{17}
-\indexentry{variable}{17}
-\indexentry{PajeDefineEventType}{17}
-\indexentry{PajeDefineStateType}{17}
-\indexentry{PajeDefineVariableType}{19}
-\indexentry{PajeDefineLinkType}{19}
-\indexentry{PajeDefineEntityValue}{19}
-\indexentry{PajeSetState}{20}
-\indexentry{PajePushState}{20}
-\indexentry{PajePopState}{20}
-\indexentry{PajeNewEvent}{20}
-\indexentry{PajeSetVariable}{20}
-\indexentry{PajeAddVariable}{20}
-\indexentry{PajeSubVariable}{20}
-\indexentry{PajeStartLink}{20}
-\indexentry{PajeEndLink}{20}
+\indexentry{PajeDefineEventType}{8}
+\indexentry{PajeDefineStateType}{8}
+\indexentry{PajeDefineVariableType}{10}
+\indexentry{PajeDefineLinkType}{10}
+\indexentry{PajeDefineEntityValue}{10}
+\indexentry{PajeSetState}{11}
+\indexentry{PajePushState}{11}
+\indexentry{PajePopState}{11}
+\indexentry{PajeNewEvent}{11}
+\indexentry{PajeSetVariable}{11}
+\indexentry{PajeAddVariable}{11}
+\indexentry{PajeSubVariable}{11}
+\indexentry{PajeStartLink}{11}
+\indexentry{PajeEndLink}{11}
