@@ -1,5 +1,0 @@
-{
-    file_annotations = {
-	annotation_for_/home/benhur/cvs/Paje/SpaceTime.bproj/STController.m = "97 480 278 317 0 0  2240 1024 ";
-    };
-}
